[gd_scene load_steps=9 format=3 uid="uid://cny3bk74mxh3"]

[ext_resource type="Texture2D" uid="uid://ctatndbw2rtxv" path="res://graphics/car/main.png" id="1_ivoll"]
[ext_resource type="Script" path="res://scenes/enemies/car.gd" id="1_ruswu"]
[ext_resource type="Texture2D" uid="uid://c0idyul7flr43" path="res://graphics/car/turret.png" id="3_tmx4j"]
[ext_resource type="Texture2D" uid="uid://bmd5vmdu3s6jr" path="res://graphics/explosions/gun.png" id="4_s1xu3"]
[ext_resource type="AudioStream" uid="uid://bhmq0knm727ws" path="res://audio/explosion.wav" id="5_0r86j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_38qgw"]
radius = 1294.97

[sub_resource type="Animation" id="Animation_3j0ig"]
resource_name = "laser_load"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/RayCast2D/Laser1:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turret/RayCast2D2/Laser2:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bm81s"]
_data = {
"laser_load": SubResource("Animation_3j0ig")
}

[node name="Car" type="PathFollow2D"]
script = ExtResource("1_ruswu")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 15

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacterBody2D"]
visible = false
polygon = PackedVector2Array(-162, -180, -42, -179, -26, -161, 63, -161, 89, -176, 192, -171, 235, -119, 249, -81, 247, 91, 219, 146, 191, 174, 65, 176, 54, 152, -24, 154, -44, 184, -168, 185, -181, 137, -173, 54, -245, 46, -243, -53, -179, -57, -180, -162)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(59, 0)
rotation = 1.5708
texture = ExtResource("1_ivoll")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_38qgw")

[node name="Turret" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Turret"]
rotation = 1.5708
texture = ExtResource("3_tmx4j")

[node name="RayCast2D" type="RayCast2D" parent="Turret"]
position = Vector2(113, -26)
target_position = Vector2(1170, 0)

[node name="Laser1" type="Line2D" parent="Turret/RayCast2D"]
points = PackedVector2Array(0, 1.90735e-06)
width = 0.0
default_color = Color(0.533333, 0.0509804, 0, 1)

[node name="RayCast2D2" type="RayCast2D" parent="Turret"]
position = Vector2(113, 30)
target_position = Vector2(1173, 0)

[node name="Laser2" type="Line2D" parent="Turret/RayCast2D2"]
points = PackedVector2Array(0, 0)
width = 0.0
default_color = Color(0.533333, 0.0509804, 0, 1)

[node name="GunFire1" type="Sprite2D" parent="Turret"]
modulate = Color(1, 1, 1, 0)
position = Vector2(202, -28)
rotation = 1.5708
scale = Vector2(0.765515, 0.765515)
texture = ExtResource("4_s1xu3")

[node name="GunFire2" type="Sprite2D" parent="Turret"]
modulate = Color(1, 1, 1, 0)
position = Vector2(202, 31)
rotation = 1.5708
scale = Vector2(0.765515, 0.765515)
texture = ExtResource("4_s1xu3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bm81s")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_0r86j")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
